--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,5 @@
 {
-  "name": "hibrida",
-  "integrations": {
-    "capacitor": {}
-  },
+  "name": "ionic-app-base",
+  "integrations": {},
   "type": "angular-standalone"
 }
