--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@ionic/angular": "^8.0.0",
+    "@teachablemachine/image": "^0.8.3",
+    "@tensorflow/tfjs": "^1.3.1",
     "firebase": "^10.14.1",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
